# wx_app

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  build_submodules.sh  module.sh  readme.md
3rd/wxWidgets/: build.sh  build_linux.sh
app/: CMakeLists.txt
app/src/App/: main.cpp
